# data-engineering-on-gcp

./: README.md  kan.txt
01-introduction-to-data-engineering/: README.md  fetch.sh  load.sh  pyproject.toml
02-building-a-data-warehouse-with-bigquery/: README.md
03-setting-up-data-lake-using-google-cloud-storage/: README.md
04-building-data-pipelines-with-apache-airflow-cloud-composer/: Dockerfile  README.md  docker-compose.yml
05-data-visualization-with-looker-studio/: README.md
06-implementing-machine-learning-models-in-bigquery-ml/: README.md
07-real-world-capstone-project/: README.md  download.py  json_to_csv.py  read.py
helpers/: README.md  connect_to_mysql.py  docker-compose.yml  download_best_buy_dataset.py  download_breakfast_dataset.py  import_breakfast_dataset_to_mysql.py  json_to_csv.py  local.conf  production.conf  pyproject.toml
proj-product-category-classification/: README.md
proj-sales-prediction/: README.md
proj-sales-prediction-solution/: main.py  pipeline.conf  pyproject.toml  upload_products_to_bigquery.py  upload_stores_to_bigquery.py  upload_transactions_to_bigquery.py
